# gitbro

./: .gitignore  README.md  install.sh  install_ollamacommit.sh  ollamacommit.sh  pyproject.toml  requirements.txt  uninstall.sh
src/: __init__.py  cli.py  config.py  generate_message.py  providers.py  tui.py  web_graph.py
